--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="collapse" id="collapseExample">
 
-                        <div class="container p-3 rounded-3 mt-2" style="background-color: #F2B705;">
+                        <div class="container p-3 rounded-3 mt-2" style="background-color: #49E686;">
 
                             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -304,7 +304,7 @@
                 </div>
                 <div class="collapse" id="collapseExample2">
                     <div class="container">
-                        <div class="container p-3 mt-1 rounded-3 " style="background-color: #038C5A;">
+                        <div class="container p-3 mt-1 rounded-3 " style="background-color: #E6706A;">
                             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                                 <div class="accordion-item">
