--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body style="background-color: #F2F2F2;">
 
     <header>
-        <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #5F5EE6;" >
+        <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #75AAE6;" >
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-my1" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-warning" viewBox="0 0 16 16">
                         <path d="M6.826 10.88H10.5V12h-5V4.002h5v1.12H6.826V7.4h3.457v1.073H6.826v2.408Z"/>
                         <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11ZM1 2.5A1.5 1.5 0 0 1 2.5 1h11A1.5 1.5 0 0 1 15 2.5v11a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 13.5v-11Z"/>
                     </svg>
@@ -101,7 +101,7 @@
 
                 <div class="collapse" id="collapseExample">
 
-                        <div class="container p-3 rounded-3 mt-2" style="background-color: #49E686;">
+                        <div class="container p-3 rounded-3 mt-2" style="background-color: #D3E66A;">
 
                             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -304,7 +304,7 @@
                 </div>
                 <div class="collapse" id="collapseExample2">
                     <div class="container">
-                        <div class="container p-3 mt-1 rounded-3 " style="background-color: #E6706A;">
+                        <div class="container p-3 mt-1 rounded-3 " style="background-color: #E65F53;">
                             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                                 <div class="accordion-item">
