--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: #F2F2F2;">
 
     <header>
-        <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #DCE66A;" >
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-main" >
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-dark" viewBox="0 0 16 16">
@@ -101,7 +101,7 @@
 
                 <div class="collapse" id="collapseExample">
 
-                        <div class="container p-3 rounded-3 mt-2" style="background-color: #479AE6;">
+                        <div class="container p-3 rounded-3 mt-2 bg-my1">
 
                             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -304,7 +304,7 @@
                 </div>
                 <div class="collapse" id="collapseExample2">
                     <div class="container">
-                        <div class="container p-3 mt-1 rounded-3 " style="background-color: #E6655F;">
+                        <div class="container p-3 mt-1 rounded-3 bg-my2">
                             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                                 <div class="accordion-item">
