--- a/grammar/elementary/lesson3.html
+++ b/grammar/elementary/lesson3.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale-1, maximum-scale=1">
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../forindex.css">
 
 </head>
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark" >
+    <nav class="navbar navbar-expand-md fixed-top navbar-light bg-main" >
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-warning" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-dark" viewBox="0 0 16 16">
                     <path d="M6.826 10.88H10.5V12h-5V4.002h5v1.12H6.826V7.4h3.457v1.073H6.826v2.408Z"/>
                     <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11ZM1 2.5A1.5 1.5 0 0 1 2.5 1h11A1.5 1.5 0 0 1 15 2.5v11a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 13.5v-11Z"/>
                 </svg>
@@ -41,13 +41,13 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a class="btn  btn-outline-warning me-2 " href="grammar.html">
+                    <a class="btn  btn-outline-my1 me-2 " href="grammar.html">
                         Grammar course
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
                             <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
                         </svg>
                     </a>
-                    <a class="btn  btn-outline-success me-2 " href="listerning.html">
+                    <a class="btn  btn-outline-my2 me-2 " href="listerning.html">
                         Listening course
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-player" viewBox="0 0 16 16">
                             <path d="M4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V3zm1 0v3h6V3H5zm3 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -185,7 +185,7 @@
                 <a class="page-link disabled" >Lesson 3</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="#">Lesson 4</a>
+                <a class="page-link" href="lesson4.html">Lesson 4</a>
             </li>
         </ul>
     </nav>
