--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="container-md d-flex flex-column mt-3 justify-content-center">
 
-            <div class="container border border-top border-2 p-2">
+            <div class="container border border-top border-2 p-4 shadow mb-5 bg-body rounded">
                 <h2>
                     Grammar course
                 </h2>
@@ -330,7 +330,7 @@
             </div>
 
 
-            <div class="container border border-2 p-2 mt-3">
+            <div class="container border border-2 p-4 mt-3 shadow mb-5 bg-body rounded">
                 <h2>
                     Listening course
                 </h2>
