--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"  aria-controls="panelsStayOpen-collapseOne">
                                             <div class="d-flex flex-column">
                                                 <div class="container">
-                                                    <img src="res/battery-half.svg">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
+                                                        <path d="M2 6h5v4H2V6z"/>
+                                                        <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
+                                                    </svg>
                                                 </div>
                                                 <div class="container">
                                                     <h2>Elementary</h2>
@@ -122,19 +125,20 @@
                                         </button>
                                     </h2>
                                     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
-                                        <div class="accordion-body">
+
                                             <ul class="list-group">
                                                 <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
                                                         <h5 class="mb-1">Lesson 1</h5>
                                                         <small>
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-move" viewBox="0 0 16 16">
-                                                            <path fill-rule="evenodd" d="M7.646.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 1.707V5.5a.5.5 0 0 1-1 0V1.707L6.354 2.854a.5.5 0 1 1-.708-.708l2-2zM8 10a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 14.293V10.5A.5.5 0 0 1 8 10zM.146 8.354a.5.5 0 0 1 0-.708l2-2a.5.5 0 1 1 .708.708L1.707 7.5H5.5a.5.5 0 0 1 0 1H1.707l1.147 1.146a.5.5 0 0 1-.708.708l-2-2zM10 8a.5.5 0 0 1 .5-.5h3.793l-1.147-1.146a.5.5 0 0 1 .708-.708l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L14.293 8.5H10.5A.5.5 0 0 1 10 8z"/>
-                                                        </svg>
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
+                                                                <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                                                <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                                            </svg>
                                                         </small>
                                                     </div>
                                                     <p class="mb-1">No Pets Here</p>
-                                                    <small>There are <b>gramma</b> exercises</small>
+                                                    <small>Gramma: <b>have to</b> or <b>need</b> </small>
                                                 </a>
                                                 <a href="grammar/elementary/lesson2.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
@@ -147,47 +151,62 @@
                                                         </small>
                                                     </div>
                                                     <p class="mb-1">Exam time</p>
-                                                    <small>There are <b>gramma</b> exercises</small>
+                                                    <small>Gramma: <b>have to</b> or <b>need</b> </small>
                                                 </a>
                                                 <a href="grammar/elementary/lesson3.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
                                                         <h5 class="mb-1">Lesson 3</h5>
                                                         <small>
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
-                                                                <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-                                                                <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
+                                                                <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                                                <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
                                                             </svg>
                                                         </small>
                                                     </div>
                                                     <p class="mb-1">Camping</p>
-                                                    <small>There are <b>gramma</b> exercises</small>
+                                                    <small>Gramma: <b>have to</b> or <b>need</b> </small>
                                                 </a>
                                                 <a href="grammar/elementary/lesson4.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
                                                         <h5 class="mb-1">Lesson 4</h5>
-                                                        <small>3 дня назад</small>
+                                                        <small>
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
+                                                                <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                                                <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                                            </svg>
+                                                        </small>
                                                     </div>
                                                     <p class="mb-1">Rainy day</p>
-                                                    <small>There are <b>gramma</b> exercises</small>
+                                                    <small>Gramma: <b>have to</b> or <b>need</b> </small>
                                                 </a>
                                                 <a href="grammar/elementary/lesson5.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
                                                         <h5 class="mb-1">Lesson 5</h5>
-                                                        <small>3 дня назад</small>
+                                                        <small>
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
+                                                                <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                                                <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                                            </svg>
+                                                        </small>
                                                     </div>
                                                     <p class="mb-1">Football Match</p>
-                                                    <small>There are <b>gramma</b> exercises</small>
+                                                    <small>Gramma: <b>have to</b> or <b>need</b> </small>
                                                 </a>
                                                 <a href="#" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
                                                         <h5 class="mb-1">Lesson 6</h5>
-                                                        <small>3 дня назад</small>
+                                                        <small>
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-up-right" viewBox="0 0 16 16">
+                                                                <path fill-rule="evenodd" d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                                                <path fill-rule="evenodd" d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                                            </svg>
+                                                        </small>
                                                     </div>
                                                     <p class="mb-1">Name of this class</p>
-                                                    <small>There are <b>gramma</b> exercises</small>
+                                                    <small>Gramma: <b>have to</b> or <b>need</b> </small>
                                                 </a>
                                             </ul>
-                                        </div>
+
                                     </div>
                                 </div>
 
@@ -208,7 +227,7 @@
                                         </button>
                                     </h2>
                                     <div id="panelsStayOpen-collapse2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading2">
-                                        <div class="accordion-body">
+
                                             <ul class="list-group">
                                                 <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
@@ -259,7 +278,7 @@
                                                     <small>There are <b>gramma</b> exercises</small>
                                                 </a>
                                             </ul>
-                                        </div>
+
                                     </div>
                                 </div>
 
@@ -280,7 +299,7 @@
                                         </button>
                                     </h2>
                                     <div id="panelsStayOpen-collapse4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading4">
-                                        <div class="accordion-body">
+
                                             <ul class="list-group">
                                                 <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
@@ -331,7 +350,7 @@
                                                     <small>There are <b>gramma</b> exercises</small>
                                                 </a>
                                             </ul>
-                                        </div>
+
                                     </div>
                                 </div>
 
@@ -392,7 +411,7 @@
                                         </button>
                                     </h2>
                                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                                        <div class="accordion-body">
+
                                             <ul class="list-group">
                                                 <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
@@ -443,7 +462,7 @@
                                                     <small>There are <b>gramma</b> exercises</small>
                                                 </a>
                                             </ul>
-                                        </div>
+
                                     </div>
                                 </div>
 
@@ -464,7 +483,7 @@
                                         </button>
                                     </h2>
                                     <div id="panelsStayOpen-collapse3" class="accordion-collapse collapse " aria-labelledby="panelsStayOpen-heading3">
-                                        <div class="accordion-body">
+
                                             <ul class="list-group">
                                                 <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
@@ -515,7 +534,7 @@
                                                     <small>There are <b>gramma</b> exercises</small>
                                                 </a>
                                             </ul>
-                                        </div>
+
                                     </div>
                                 </div>
 
@@ -536,7 +555,7 @@
                                         </button>
                                     </h2>
                                     <div id="panelsStayOpen-collapse5" class="accordion-collapse collapse " aria-labelledby="panelsStayOpen-heading5">
-                                        <div class="accordion-body">
+
                                             <ul class="list-group">
                                                 <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                                     <div class="d-flex w-100 justify-content-between">
@@ -587,7 +606,7 @@
                                                     <small>There are <b>gramma</b> exercises</small>
                                                 </a>
                                             </ul>
-                                        </div>
+
                                     </div>
                                 </div>
 
