--- a/grammar/elementary/lesson5.html
+++ b/grammar/elementary/lesson5.html
@@ -11,7 +11,7 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light bg-main" >
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main" >
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-dark" viewBox="0 0 16 16">
