--- a/listerning.html
+++ b/listerning.html
@@ -10,7 +10,7 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light bg-main">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-dark" viewBox="0 0 16 16">
@@ -103,7 +103,7 @@
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-                    
+
                         <ul class="list-group">
                             <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                 <div class="d-flex w-100 justify-content-between">
