--- a/grammar.html
+++ b/grammar.html
@@ -113,58 +113,112 @@
                      aria-labelledby="panelsStayOpen-headingOne">
 
                     <ul class="list-group">
-                        <a href="grammar/elementary/lesson1.html" class="list-group-item list-group-item-action "
-                           aria-current="true">
+                        <a href="grammar/elementary/lesson1.html"
+                           class="list-group-item list-group-item-action " aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Lesson 1</h5>
-                                <small>3 дня назад</small>
+                                <small>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor" class="bi bi-box-arrow-in-up-right"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </small>
                             </div>
                             <p class="mb-1">No Pets Here</p>
-                            <small>There are <b>gramma</b> exercises</small>
+                            <small>Gramma: <b>have to</b> or <b>need</b> </small>
                         </a>
-                        <a href="grammar/elementary/lesson2.html" class="list-group-item list-group-item-action "
-                           aria-current="true">
+                        <a href="grammar/elementary/lesson2.html"
+                           class="list-group-item list-group-item-action " aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Lesson 2</h5>
-                                <small>3 дня назад</small>
+                                <small>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor" class="bi bi-box-arrow-in-up-right"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </small>
                             </div>
                             <p class="mb-1">Exam time</p>
-                            <small>There are <b>gramma</b> exercises</small>
+                            <small>Gramma: <b>have to</b> or <b>need</b> </small>
                         </a>
-                        <a href="grammar/elementary/lesson3.html" class="list-group-item list-group-item-action "
-                           aria-current="true">
+                        <a href="grammar/elementary/lesson3.html"
+                           class="list-group-item list-group-item-action " aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Lesson 3</h5>
-                                <small>3 дня назад</small>
+                                <small>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor" class="bi bi-box-arrow-in-up-right"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </small>
                             </div>
                             <p class="mb-1">Camping</p>
-                            <small>There are <b>gramma</b> exercises</small>
+                            <small>Gramma: <b>have to</b> or <b>need</b> </small>
                         </a>
-                        <a href="grammar/elementary/lesson4.html" class="list-group-item list-group-item-action "
-                           aria-current="true">
+                        <a href="grammar/elementary/lesson4.html"
+                           class="list-group-item list-group-item-action " aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Lesson 4</h5>
-                                <small>3 дня назад</small>
+                                <small>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor" class="bi bi-box-arrow-in-up-right"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </small>
                             </div>
                             <p class="mb-1">Rainy day</p>
-                            <small>There are <b>gramma</b> exercises</small>
+                            <small>Gramma: <b>have to</b> or <b>need</b> </small>
                         </a>
-                        <a href="grammar/elementary/lesson5.html" class="list-group-item list-group-item-action "
-                           aria-current="true">
+                        <a href="grammar/elementary/lesson5.html"
+                           class="list-group-item list-group-item-action " aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Lesson 5</h5>
-                                <small>3 дня назад</small>
+                                <small>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor" class="bi bi-box-arrow-in-up-right"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </small>
                             </div>
                             <p class="mb-1">Football Match</p>
-                            <small>There are <b>gramma</b> exercises</small>
+                            <small>Gramma: <b>have to</b> or <b>need</b> </small>
                         </a>
                         <a href="#" class="list-group-item list-group-item-action " aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">Lesson 6</h5>
-                                <small>3 дня назад</small>
+                                <small>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor" class="bi bi-box-arrow-in-up-right"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.364 13.5a.5.5 0 0 0 .5.5H13.5a1.5 1.5 0 0 0 1.5-1.5v-10A1.5 1.5 0 0 0 13.5 1h-10A1.5 1.5 0 0 0 2 2.5v6.636a.5.5 0 1 0 1 0V2.5a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5H6.864a.5.5 0 0 0-.5.5z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z"/>
+                                    </svg>
+                                </small>
                             </div>
                             <p class="mb-1">Name of this class</p>
-                            <small>There are <b>gramma</b> exercises</small>
+                            <small>Gramma: <b>have to</b> or <b>need</b> </small>
                         </a>
                     </ul>
 
