--- a/article.html
+++ b/article.html
@@ -137,7 +137,7 @@
         </div>
 
 
-        <div class="accordion-item">
+        <div class="accordion-item mt-3">
             <h2 class="accordion-header " id="panelsStayOpen-headingTwo">
                 <button class="accordion-button collapsed bg-main" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                     <h2>Languages</h2>
