--- a/index.html
+++ b/index.html
@@ -704,8 +704,14 @@
             </div>
         </div>
 
+        <div class="container d-flex flex-row justify-content-between rounded-3 p-3 shadow bg-body">
+            <a class="btn  btn-outline-secondary" href="news.html"> News </a>
+            <a class="btn  btn-outline-secondary" href="article.html"> Articles </a>
+            <a class="btn  btn-outline-secondary" href="aboutus.html"> About us </a>
+        </div>
+
     </div>
-    </div>
+
 
 
 </main>
