--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="collapse" id="collapseExample">
 
-                <div class="container p-3 rounded-3 mt-2 bg-my1">
+                <div class="p-2 rounded-3 mt-3 bg-my1">
 
                     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
@@ -421,7 +421,7 @@
         </div>
 
 
-        <div class="container p-4 mt-2 shadow mb-5 bg-body rounded">
+        <div class="p-4 mt-2 shadow mb-5 bg-body rounded">
             <h2>
                 Listening course
             </h2>
@@ -453,8 +453,8 @@
 
             </div>
             <div class="collapse" id="collapseExample2">
-                <div class="container">
-                    <div class="container p-3 mt-1 rounded-3 bg-my2">
+
+                    <div class="p-2 mt-3 rounded-3 bg-my2">
                         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                             <div class="accordion-item">
@@ -701,7 +701,7 @@
 
                     </div>
                 </div>
-            </div>
+
         </div>
 
         <div class="container d-flex flex-row justify-content-between rounded-3 p-3 shadow bg-body">
