--- a/article.html
+++ b/article.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="forindex.css" rel="stylesheet">
 </head>
-<body style="background-color: #F2F2F2;">
+<body class="bg-body2">
 
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main">
