--- a/grammar/elementary/lesson3.html
+++ b/grammar/elementary/lesson3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../forindex.css">
 
 </head>
-<body style="background-color: #F2F2F2;">
+<body class="bg-body2">
 
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main" >
