--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="forindex.css" rel="stylesheet">
 </head>
-<body style="background-color: #F2F2F2;">
+<body class="bg-body2">
 
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main">
@@ -707,7 +707,7 @@
         <div class="container d-flex flex-row justify-content-between rounded-3 p-3 shadow bg-body">
             <a class="btn  btn-outline-secondary" href="news.html">
                 News
-                
+
             </a>
             <a class="btn  btn-outline-secondary" href="article.html">
                 Articles
