--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
 
             <div class="collapse" id="collapseExample">
 
-                <div class="p-2 rounded-3 mt-3 bg-my1">
+                <div class="p-2 rounded-3 mt-3 border border-my1">
 
                     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
-                        <div class="accordion-item">
+                        <div class="accordion-item border-bottom border-my1">
                             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapseOne"
                                         aria-controls="panelsStayOpen-collapseOne">
-                                    <div class="d-flex flex-column">
+                                    <div class="d-flex flex-column ">
                                         <div class="container">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                  fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
@@ -141,7 +141,7 @@
 
                                 <ul class="list-group">
                                     <a href="grammar/elementary/lesson1.html"
-                                       class="list-group-item list-group-item-action " aria-current="true">
+                                       class="list-group-item list-group-item-action" aria-current="true">
                                         <div class="d-flex w-100 justify-content-between">
                                             <h5 class="mb-1">Lesson 1</h5>
                                             <small>
@@ -252,7 +252,7 @@
                             </div>
                         </div>
 
-                        <div class="accordion-item mt-2">
+                        <div class="accordion-item mt-2 border-bottom border-my1">
                             <h2 class="accordion-header" id="panelsStayOpen-heading2">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true"
@@ -454,10 +454,10 @@
             </div>
             <div class="collapse" id="collapseExample2">
 
-                    <div class="p-2 mt-3 rounded-3 bg-my2">
+                    <div class="p-2 mt-3 rounded-3 border border-my2">
                         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
-                            <div class="accordion-item">
+                            <div class="accordion-item border-bottom border-my2">
                                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
@@ -537,7 +537,7 @@
                                 </div>
                             </div>
 
-                            <div class="accordion-item mt-2">
+                            <div class="accordion-item mt-2 border-bottom border-my2">
                                 <h2 class="accordion-header" id="panelsStayOpen-heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#panelsStayOpen-collapse3" aria-expanded="true"
